infrastructure/local/k8s/mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-depl
  namespace: jacando-task
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server-mongo
  template:
    metadata:
      labels:
        app: server-mongo
    spec:
      containers:
        - name: server-mongo
          image: mongo
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-srv
  namespace: jacando-task
spec:
  selector:
    app: server-mongo
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-ext-port
  namespace: jacando-task
spec:
  type: NodePort
  selector:
    app: server-mongo
  ports:
    - port: 27017
      targetPort: 27017
      nodePort: 30003
